monitoring/85-authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: monitoring-access-policy
  namespace: monitoring
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: Gateway
    name: waypoint
  action: ALLOW
  rules:
    - from:
      - source:
          namespaces: ["istio-system", "monitoring", "affine"]
